## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.11 2001/08/18 15:03:20 dan_karrels Exp $

noinst_LTLIBRARIES = libgnuworld.la
libgnuworld_la_SOURCES = Buffer.cc \
	ClientSocket.cc \
	EConfig.cc \
	ELog.cc \
	FileSocket.cc \
	Socket.cc \
	StringTokenizer.cc \
	match.cc \
	md5hash.cc \
	misc.cc
libgnuworld_la_LDFLAGS = -static
