## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.13 2002/06/06 02:29:00 dan_karrels Exp $

noinst_LTLIBRARIES = libgnuworld.la
libgnuworld_la_SOURCES = Buffer.cc \
	Connection.cc \
	ConnectionManager.cc \
	ClientSocket.cc \
	EConfig.cc \
	ELog.cc \
	FileSocket.cc \
	Socket.cc \
	StringTokenizer.cc \
	match.cc \
	md5hash.cc \
	misc.cc
libgnuworld_la_LDFLAGS = -static
