## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.15 2002/07/31 03:14:04 dan_karrels Exp $

noinst_LTLIBRARIES = libgnuworld.la
libgnuworld_la_SOURCES = Buffer.cc \
	Connection.cc \
	ConnectionHandler.cc \
	ConnectionManager.cc \
	EConfig.cc \
	ELog.cc \
	StringTokenizer.cc \
	match.cc \
	md5hash.cc \
	misc.cc
libgnuworld_la_LDFLAGS = -static
