## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.11 2010/08/31 21:16:45 denspike Exp $

lib_LTLIBRARIES = libircu.la
libircu_la_SOURCES = msg_AC.cc \
	msg_AD.cc \
	msg_B.cc \
	msg_C.cc \
	msg_CM.cc \
	msg_D.cc \
	msg_DS.cc \
	msg_EA.cc \
	msg_EB.cc \
	msg_G.cc \
	msg_GL.cc \
	msg_I.cc \
	msg_J.cc \
	msg_JU.cc \
	msg_K.cc \
	msg_L.cc \
	msg_M351.cc \
	msg_M391.cc \
	msg_M.cc \
	msg_N.cc \
	msg_NOOP.cc \
	msg_O.cc \
	msg_PA.cc \
	msg_P.cc \
	msg_Q.cc \
	msg_R.cc \
	msg_RI.cc \
	msg_RO.cc \
	msg_S.cc \
	msg_Server.cc \
	msg_SQ.cc \
	msg_T.cc \
	msg_V.cc \
	msg_WA.cc \
	msg_W.cc \
	msg_XQ.cc \
	msg_XR.cc \
	msg_Y.cc

libircu_la_CXXFLAGS = -I${top_srcdir}/include -I${top_srcdir}/libgnuworld
libircu_la_LDFLAGS = -module -export-dynamic
