## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.11 2010/08/31 21:16:45 denspike Exp $

lib_LTLIBRARIES += libircu.la
libircu_la_SOURCES = \
	libircu/msg_AC.cc \
	libircu/msg_AD.cc \
	libircu/msg_B.cc \
	libircu/msg_C.cc \
	libircu/msg_CF.cc \
	libircu/msg_CM.cc \
	libircu/msg_D.cc \
	libircu/msg_DS.cc \
	libircu/msg_EA.cc \
	libircu/msg_EB.cc \
	libircu/msg_G.cc \
	libircu/msg_GL.cc \
	libircu/msg_I.cc \
	libircu/msg_J.cc \
	libircu/msg_JU.cc \
	libircu/msg_K.cc \
	libircu/msg_L.cc \
	libircu/msg_M351.cc \
	libircu/msg_M391.cc \
	libircu/msg_M.cc \
	libircu/msg_N.cc \
	libircu/msg_NOOP.cc \
	libircu/msg_O.cc \
	libircu/msg_PA.cc \
	libircu/msg_P.cc \
	libircu/msg_Q.cc \
	libircu/msg_R.cc \
	libircu/msg_RI.cc \
	libircu/msg_RO.cc \
	libircu/msg_S.cc \
	libircu/msg_Server.cc \
	libircu/msg_SQ.cc \
	libircu/msg_T.cc \
	libircu/msg_V.cc \
	libircu/msg_WA.cc \
	libircu/msg_W.cc \
	libircu/msg_XQ.cc \
	libircu/msg_XR.cc \
	libircu/msg_Y.cc

libircu_la_CXXFLAGS = -I${top_srcdir}/include -I${top_srcdir}/libgnuworld -I${top_srcdir}/libnotifier
libircu_la_LDFLAGS = -module -export-dynamic
